# Ball

./: .Rbuildignore  .gitignore  .travis.yml  404.html  DESCRIPTION  NAMESPACE  README.md  TODO.html  TODO.md  appveyor.yml  authors.html  authors.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
Python-package/: BD.c  MANIFEST.in  Makefile  README.md  README.rst  TODO.md  bd_test.py  build_ffi.py  cball.h  cball.py  configure.sh  distutils.cfg  pyproject.toml  setup.py  utilize.py  wrap_c.py
R/: bcorsis.R  bcov.R  bd.R  data.R  nhdist.R
R-package/: .Rbuildignore  .gitignore  Ball.Rproj  DESCRIPTION  NAMESPACE  NEWS.md  README.md  TODO.md  _pkgdown.yml  cleanup  configure  configure.ac  configure.win  cran-comments.md
R-package/R/: Ball.R  K_bcov.R  K_bcov_pan.R  MetricNew.R  RcppExports.R  bcorsis.R  bcov.R  bcov_tmp.R  bd.R  bd.gaws.R  data.R  gwas.R  kbcov_new.R  nhdist.R  sbd.R  sysdata.rda  utilize.R  wrap_c.R  wrap_c_tmp.R
R-package/data/: ArcticLake.rda  bdvmf.rda  meteorology.rda
R-package/inst/: CITATION
R-package/man/: ArcticLake.Rd  Ball-package.Rd  KBCov.Rd  KBCovLimit.Rd  KBCov_permuted.Rd  bcorsis.Rd  bcov.Rd  bcov.test.Rd  bd.Rd  bd.gwas.test.Rd  bd.test.Rd  bdvmf.Rd  genlung.Rd  kbcov_R.Rd  macaques.Rd  meteorology.Rd  nhdist.Rd  sbd.test.Rd  sub.dist.Rd
R-package/src/: BD.c  BD.h  BI.c  BI.h  Ball_omp.h  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  api_R.c  api_R.h  ball_init.c  bcor.c  bcor.h  bd_gwas.c  bd_gwas.h  bdd_matrix.c  bdd_matrix.h  bf.h  kbcov.c  kbd.c  kbd.h  mq.cpp  sb.cpp  surv.c  surv.h  utilities.c  utilities.h  utility_cpp11.cpp  utility_cpp11.h  utilize_R.c  utilize_R.h
R-package/tests/: testthat.R
R-package/tests/testthat/: test_bcorsis.R  test_bcov.R  test_bd.R  test_bd_gwas.R
R-package/vignettes/: Ball.R  Ball.Rmd  Ball.html  bd_gwas.Rmd
articles/: Ball.html  Ball.md  bd_gwas.html  (+3 more)
src/: BD.c  BD.h  BI.c  BI.h  Ball_omp.h  CMakeLists.txt  README.md  api_R.h  bcor.c  bcor.h  bd_gwas.c  bd_gwas.h  bdd_matrix.c  bdd_matrix.h  kbcov.c  kbd.c  kbd.h  median.c  median.h  surv.c  surv.h  test.c  test2.c  utilities.c  utilities.h  utilize_cross.c  utilize_cross.h
src/test/: CMakeLists.txt
src/test/ball_test/: CMakeLists.txt  basic_test.cpp  htestTest.cpp  statTest.cpp  stats_crude.c  stats_crude.h  test_setting.h
(+102 files in other folders)
